Version 1.6.4
---------------------------------------------------------------
15 April 2008
+ Added missing pager navigation tags to schedule listing.
+ Updated: templates/admin/schedules.tpl

Version 1.6.3
----------------------------------------------------------------
31 March 2008
+ Added missing repeatYearly function.

Version 1.6.2
----------------------------------------------------------------
14 March 2008
+ Fixed: Bug #1879356 - Events spanning multiple days do not
  autocorrect time.
+ Updated: javascript/check_date/head.js

5 February 2008
+ Removed test echo

29 January 2008
+ Added a upcoming date format
+ Updated: conf/config.php

3 January 2008
+ Day view doesn't allow you to add an event until you create a
  schedule.
+ Deleting the public calendar resets if the default.

Version 1.6.1
----------------------------------------------------------------
13 December 2007
+ Fixed call to absent function in Event.php

Version 1.6.0
----------------------------------------------------------------
3 December 2007
+ Month grid view can be set to show events
+ Calendar events can be posted in the blog
+ Paragraph tag around day message
+ Fixed comment in event tpl preventing bar from disappearing in user
  mode
+ Removed extra message tag from month list view.
+ Updated:
- templates/style.css
- templates/admin/forms/blog.tpl
- templates/admin/settings.tpl
- templates/view/day.tpl
- templates/view/event.tpl
- templates/view/month/grid.tpl
- templates/view/month/list.tpl


15 October 2007
+ Applied patch #1813081 from aDarkling

Version 1.5.3
----------------------------------------------------------------
18 September 2007
+ Fixed bug with js_calendar date selection.

Version 1.5.2
-----------------------------------------------------------------
22 August 2007
+ removed calendar colors that matched default theme.

Version 1.5.1
-----------------------------------------------------------------
27 July 2007
+ increased popup size for schedule


11 June 2007